# ezcli

./: CLAUDE.md  CMakeLists.txt  README.md  ez_cli.cpp  ez_cli.h
benchmarks/: CMakeLists.txt  bench_ez_cli.cpp
fuzz/: CMakeLists.txt  fuzz_ez_cli.cpp
tests/: CMakeLists.txt  test_ez_cli.cpp
